--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,15 @@
 		<tag/>
 		<url/>
 	</scm>
+
 	<properties>
 		<java.version>17</java.version>
+		<mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+		<h2.version>2.3.232</h2.version>
+		<flyway-core.version>11.10.2</flyway-core.version>
+		<spring-boot.version>3.5.4</spring-boot.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,10 +49,23 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- DATABASE -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>11.10.2</version>
+			<version>${flyway-core.version}</version>
 		</dependency>
 
 		<dependency>
