--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,6 @@ spring.jpa.show-sql=true
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
