--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=notification
 
 # H2
-h2.console.enabled=true
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 
 ### DATABASE
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
