--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 		<h2.version>2.3.232</h2.version>
 		<flyway-core.version>11.10.2</flyway-core.version>
 		<spring-boot.version>3.5.4</spring-boot.version>
+		<mockito-version>5.18.0</mockito-version>
+		<restassured-version>5.5.5</restassured-version>
 	</properties>
 
 	<dependencies>
@@ -82,9 +84,25 @@
 			<version>${flyway-core.version}</version>
 		</dependency>
 
+		<!-- TESTS -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${restassured-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
