fix: adjustment in pagination

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=validate
 
 ### LOG
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 ### DATABASE
 spring.datasource.username=root
