--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=root
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+
+### DATABASE FETCHING LIMITS
+database.max.page.size=5000
