--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.password=
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+### DATABASE FETCHING LIMITS
+database.max.page.size=5000
+
